--- a/bootstrap-1.html
+++ b/bootstrap-1.html
@@ -20,6 +20,7 @@
 		></script>
 	</head>
 	<body>
+		TEST
 		<div class="accordion" id="accordionExample">
 			<div class="accordion-item">
 				<h2 class="accordion-header" id="headingOne">
