--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8"/>
+    <!-- 페이지 타입 -->
+    <meta property="og:type" content="website" />
+    <!-- 이름 -->
+    <meta property="og:site_name" content="양정하" />
+    <!-- 제목 -->
+    <meta property="og:title" content="양정하의 테스트" />
+    <!-- 설명 -->
+    <meta property="og:description" content="나의 포트폴리오를 구경하세요" />
+    <!-- 대표 이미지 -->
+    <meta
+      property="og:image"
+      content="https://th.bing.com/th/id/OIP.qujCtICcjXngGD64xN--7AHaFj?w=201&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+    />
+    <!-- 접속 가능한주소 -->
+    <meta
+      property="og:url"
+      content="https://www.bing.com/images/search?view=detailV2&ccid=qujCtICc&id=2843D9CFB4414C6449CD06C02A904B28DF495997&thid=OIP.qujCtICcjXngGD64xN--7AHaFj&mediaurl=https%3a%2f%2fst.depositphotos.com%2f1654249%2f1262%2fi%2f950%2fdepositphotos_12628856-stock-photo-red-rising-arrow-graph.jpg&exph=768&expw=1024&q=%ec%98%a4%ed%94%88%ea%b7%b8%eb%9e%98%ed%94%84+%ec%9d%b4%eb%af%b8%ec%a7%80&simid=608011681309723107&FORM=IRPRST&ck=7F76817EAC64A89B7D997965EA375545&selectedIndex=21&ajaxhist=0&ajaxserp=0"
+    />
 </head>
 <body>
     index
