오픈 2번째 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 접속 가능한주소 -->
     <meta
       property="og:url"
-      content="https://www.bing.com/images/search?view=detailV2&ccid=qujCtICc&id=2843D9CFB4414C6449CD06C02A904B28DF495997&thid=OIP.qujCtICcjXngGD64xN--7AHaFj&mediaurl=https%3a%2f%2fst.depositphotos.com%2f1654249%2f1262%2fi%2f950%2fdepositphotos_12628856-stock-photo-red-rising-arrow-graph.jpg&exph=768&expw=1024&q=%ec%98%a4%ed%94%88%ea%b7%b8%eb%9e%98%ed%94%84+%ec%9d%b4%eb%af%b8%ec%a7%80&simid=608011681309723107&FORM=IRPRST&ck=7F76817EAC64A89B7D997965EA375545&selectedIndex=21&ajaxhist=0&ajaxserp=0"
+      content="https://ko.depositphotos.com/12628856/stock-photo-red-rising-arrow-graph.html"
     />
 </head>
 <body>
