--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- 대표 이미지 -->
     <meta
       property="og:image"
-      content="https://th.bing.com/th/id/OIP.qujCtICcjXngGD64xN--7AHaFj?w=201&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+      content="https://st.depositphotos.com/1654249/1262/i/950/depositphotos_12628856-stock-photo-red-rising-arrow-graph.jpg"
     />
     <!-- 접속 가능한주소 -->
     <meta
